# TaxonomicalSearch

./: .gitignore  CMakeLists.txt  README.md
data/: allCorrect.txt  notAccepted.txt  oneMissing.txt
src/: Entry.cpp  Entry.h  Parser.cpp  Parser.h  TaxonTrie.cpp  TaxonTrie.h  main.cpp  main.h  traversals.cpp  traversals.h
